--- a/Payeh/Payeh.csproj
+++ b/Payeh/Payeh.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net5.0</TargetFramework>
         <AssemblyName>Payeh</AssemblyName>
         <RootNamespace>Payeh</RootNamespace>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageVersion>1.0.1</PackageVersion>
     </PropertyGroup>
 
     <ItemGroup>
