Add Phone.cs ValueObject

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /Payeh.Api.Sample/bin/
 /Payeh.Api.Sample/obj/
-
+/Payeh.Console.Sample/bin/
+/Payeh.Console.Sample/obj/
 /Payeh/bin/
 /Payeh/obj/
 
