--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-/Payeh.Api.Sample/bin/
-/Payeh.Api.Sample/obj/
-/Payeh.Console.Sample/bin/
-/Payeh.Console.Sample/obj/
-/Payeh/bin/
-/Payeh/obj/
+Payeh.Api.Sample/bin/
+Payeh.Api.Sample/obj/
+Payeh.Console.Sample/bin/
+Payeh.Console.Sample/obj/
+Payeh/bin/
+Payeh/obj/
+
 
 .idea
