--- a/Payeh/Payeh.csproj
+++ b/Payeh/Payeh.csproj
@@ -5,7 +5,7 @@
         <AssemblyName>Payeh</AssemblyName>
         <RootNamespace>Payeh</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageVersion>1.0.2</PackageVersion>
+        <PackageVersion>1.0.3</PackageVersion>
         <Authors>Akbar Ahmadi Saray</Authors>
         <PackageTags>NetCore,C#</PackageTags>
     </PropertyGroup>
@@ -18,6 +18,7 @@
       <PackageReference Include="FluentValidation" Version="10.3.3" />
       <PackageReference Include="Google.Apis.Translate.v2" Version="1.55.0.875" />
       <PackageReference Include="Google.Cloud.Translation.V2" Version="2.1.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
       <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
@@ -25,6 +26,12 @@
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="6.2.3" />
     </ItemGroup>
 
 </Project>
